[package]
name = "lua-src"
version = "544.0.1"
authors = ["Aleksandr Orlenko <zxteam@protonmail.com>"]
edition = "2018"
repository = "https://github.com/khvzak/lua-src-rs"
keywords = ["lua", "lua51", "lua52", "lua53", "lua54"]
readme = "README.md"
license = "MIT"
description = """
Sources of Lua 5.1/5.2/5.3/5.4 and logic to build them.
"""

[features]
ucid = [] # accept UniCode IDentifiers

[workspace]
members = ["testcrate"]

[dependencies]
cc = "1.0.54"
