[package]
name = "lua-src"
version = "548.1.1"
authors = ["Aleksandr Orlenko <zxteam@protonmail.com>"]
edition = "2021"
repository = "https://github.com/mlua-rs/lua-src-rs"
keywords = ["lua", "lua51", "lua52", "lua53", "lua54"]
readme = "README.md"
license = "MIT"
description = """
Sources of Lua 5.1/5.2/5.3/5.4 and logic to build them.
"""

[features]
ucid = [] # accept UniCode IDentifiers

[workspace]
members = ["testcrate"]

[dependencies]
cc = "1.2"

[dev-dependencies]
target-lexicon = "0.13"
tempfile = "3.0"
